--- a/src/style.css
+++ b/src/style.css
@@ -1,56 +1,63 @@
+styles.css@font-face {
+    font-family: 'Nokia Pure Headline';
+    src: url('./assets/fonts/nokia.ttf') format('opentype');
+}
+@font-face {
+    font-family: 'Ebrima';
+    src: url('./assets/fonts/Ebrahim.ttf') format('opentype');
+}
 *{
-  box-sizing: border-box;
-  margin: 0;
+    box-sizing: border-box;
+    margin: 0;
+    font-family: 'Abyssinica SIL', sans-serif;
 }
 
 /* landing page styles */
-
-body {
- 
+body{
+    font-family: 'Addis', sans-serif !important;
+    background-color: #fff;
 }
-
 .header{
-  background-image: linear-gradient(
-    135deg,
-    rgb(24, 42, 115) 0%,
-    rgb(33, 138, 174) 69%,
-    rgb(32, 167, 172) 89%
-  ) !important;
-  text-align: center;
-  padding-top: 30px;
-  padding-bottom: 30px;
+    background-image: linear-gradient(
+            135deg,
+            rgb(24, 42, 115) 0%,
+            rgb(33, 138, 174) 69%,
+            rgb(32, 167, 172) 89%
+    ) !important;
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 .header h2{
-  color: white;
+    color: white;
 }
 .body{
-  background-image:linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url('./assets/food.png');
-  
-  background-position: center;
-  
-  width: 100%;
-  height: 90vh;
+    /* background-image:linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url('./assets/food.png');*/
+    background-position: center;
+
+    width: 100%;
+    height: 90vh;
 }
 .btn{
-  display: inline-block;
-   text-decoration: none;
-   color: #fff;
-   border: 1px solid #fff;
-   padding: 12px 34px;
-   font-size: 13px;
-   background: transparent;
-   position: relative;
-   cursor: pointer;
-   margin-left: 30px;
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 12px 34px;
+    font-size: 13px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+    margin-left: 30px;
 }
 .btn:hover{
-  border: 1px solid white;
+    border: 1px solid white;
     background: rgba(4,9,30,0.7);
     transition: 0.5s;
 }
 .body div{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
